--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,9 @@
   },
   "require-dev":{
     "phpmd/phpmd": "2.2.*",
-    "squizlabs/php_codesniffer": "2.3.*"
+    "squizlabs/php_codesniffer": "2.3.*",
+    "behat/behat": "3.*",
+    "phpspec/phpspec": "2.*"
   },
   "autoload": {
     "psr-4": {
