possibility to import indents

--- a/spec/Phpstorm/Configurator/Configuration/fixtures/phpstorm_proper_example.yml
+++ b/spec/Phpstorm/Configurator/Configuration/fixtures/phpstorm_proper_example.yml
@@ -2,3 +2,8 @@ settings:
     inspection:
         phpmd: "file.xml"
         phpcs: "example.xml"
+    indent:
+        php: 4
+        js: 4
+        yml: 4
+        gherkin: 4
