--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,6 @@ language: php
 
 php:
     - 5.5
-    - 5.6
 
 before_install:
     - composer self-update
@@ -13,4 +12,6 @@ install:
     - composer install --no-interaction
 
 script:
-  - vendor/bin/phpspec run
+    - vendor/bin/phpcs --standard=PSR1,PSR2 src
+    - vendor/bin/phpmd src text cleancode,codesize,design
+    - vendor/bin/phpspec run
