--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,9 @@
   ],
   "require": {
     "symfony/console": "2.6.*",
-    "symfony/yaml": "2.6.*"
+    "symfony/yaml": "2.6.*",
+    "symfony/config": "2.6.*",
+    "symfony/property-access": "2.6.*"
   },
   "require-dev":{
     "phpmd/phpmd": "2.2.*",
