--- a/.travis.yml
+++ b/.travis.yml
@@ -4,14 +4,11 @@ language: php
 
 php:
     - 5.5
-
-before_install:
-    - composer self-update
+    - 5.6
+    - 7.0
 
 install:
     - composer install --no-interaction
 
 script:
-    - vendor/bin/phpcs --standard=PSR1,PSR2 src
-    - vendor/bin/phpmd src text cleancode,codesize,design
-    - vendor/bin/phpspec run
+    - vendor/bin/phing
